--- a/best-games/src/App.css
+++ b/best-games/src/App.css
@@ -12,13 +12,12 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 h2 {
   height: 10px;
   top: 20px;
   position: absolute;
-  text-align: top;
-  font-family: Arial, Helvetica, sans-serif;
+  text-align: top left;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 h3 {
@@ -26,5 +25,50 @@ h3 {
   top: 40px;
   height: auto;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+section {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+section1 {
+  height: 2px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: small;
+  text-align: center;
+}
+p {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  color: black;
+}
+p1 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  color: black;
+}
+p2 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  color: black;
+}
+
+section2 {
+  font-family: 'Courier New', Courier, monospace;
+  height: 2px;
+  font-size: small;
+  text-align: center;
+}
+
+p3 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  color: black;
+}
+
+p4 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+  color: black;
 }
